# krx-fundamentals-api

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
examples/: README.md  basic_usage.py  portfolio_analysis.py  screening.py
src/krx_fundamentals_api/: config.py  main.py
src/krx_fundamentals_api/models/: schemas.py
src/krx_fundamentals_api/routes/: company.py  market.py
src/krx_fundamentals_api/scrapers/: base.py  dart.py  krx.py  naver.py
src/krx_fundamentals_api/services/: cache.py  scheduler.py
tests/: conftest.py  test_api.py  test_models.py  test_scrapers.py
