[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "krx-fundamentals-api"
version = "0.1.0"
description = "국내 기업 펀더멘탈 데이터 REST API — 재무제표, 투자지표, 배당, 대주주"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "redis[hiredis]>=5.0.0",
    "apscheduler>=3.10.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.34.0",
    "ruff>=0.6.0",
    "fakeredis>=2.25.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/krx_fundamentals_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
